# coursehub-django

./: .env.example  .gitignore  Dev_Plan.md  Docker_Setup.md  Dockerfile  Project_Implementation_Reference.md  README.md  System_Design.md  docker-compose.yml  pyproject.toml  requirements.txt
courses/: admin.py  models.py  services.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_image.py  0002_alter_course_public_id_alter_lesson_public_id.py  0003_lesson.py  0004_lesson_can_preview_lesson_status_lesson_thumbnail_and_more.py  0005_alter_lesson_options_lesson_order.py  0006_alter_lesson_options_course_timestamp_course_updated_and_more.py  0007_course_public_id.py  0008_lesson_public_id.py
docs/: Dev_Plan.md  Project_Implementation_Reference.md  System_Design.md
emails/: admin.py  forms.py  models.py  services.py  tests.py  views.py
emails/migrations/: 0001_initial.py  0002_email_timestamp.py  0003_emailverificationevent_otp.py
helpers/: __init__.py  _cloudinary.py
helpers/_cloudinary/: __init__.py  config.py  services.py
home/: settings.py  urls.py  views.py
nginx/: nginx.conf
nginx/conf.d/: coursehub-production.conf.example  coursehub.conf
templates/: base.html  home.html
templates/base/: footer.html  js.html  navbar.html
templates/courses/: detail.html  lesson.html
templates/courses/snippets/: list-display.html
templates/emails/: verification_email.html
templates/emails/hx/: form.html
templates/videos/snippets/: embed.html
theme/static_src/: package-lock.json  package.json
